<resources>
    <string name="privacy_browser">Privacy Browser</string>
    <string name="privacy_browser_settings">Privacy Browser Settings</string>
    <string name="download_started">Download started</string>
    <string name="privacy_mode">Privacy Mode</string>
    <string name="javascript_enabled">JavaScript enabled</string>
    <string name="javascript_disabled">JavaScript disabled</string>
    <string name="cookies_deleted">Cookies deleted</string>
    <string name="dom_storage_deleted">DOM Storage deleted</string>
    <string name="open_navigation">Open Navigation Drawer</string>
    <string name="close_navigation">Close Navigation Drawer</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="url_or_search_terms">URL or Search Terms</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="navigation">Navigation</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="guide">Guide</string>
    <string name="about">About</string>
    <string name="clear_and_exit">Clear and Exit</string>
    <string name="javascript">JavaScript</string>
    <string name="first_party_cookies">First-Party Cookies</string>
    <string name="third_party_cookies">Third-Party Cookies</string>
    <string name="dom_storage">DOM Storage</string>
    <string name="form_data">Form Data</string>
    <string name="clear_cookies">Clear Cookies</string>
    <string name="clear_dom_storage">Clear DOM Storage</string>
    <string name="clear_form_data">Clear Form Data</string>
    <string name="share">Share</string>
    <string name="add_to_home_screen">Add to Home Screen</string>
    <string name="refresh">Refresh</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="shortcut_name">Shortcut name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="database_view">Database View</string>
    <string name="create_bookmark">Create bookmark</string>
    <string name="create_folder">Create folder</string>
    <string name="current_folder_icon">Current folder icon</string>
    <string name="default_folder_icon">Default folder icon</string>
    <string name="web_page_favorite_icon">Web page favorite icon</string>
    <string name="folder_name">Folder name</string>
    <string name="folder_names_must_be_unique">Folder names must be unique</string>
    <string name="cannot_create_folder">Cannot create the folder because the name is not unique:</string>
    <string name="cannot_rename_folder">Cannot rename the folder because the new name is not unique:</string>
    <string name="cannot_move_bookmarks">Cannot move the selected bookmarks because no new folder was selected.</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="edit_folder">Edit folder</string>
    <string name="move_to_folder">Move to Folder</string>
    <string name="move">Move</string>
    <string name="save">Save</string>
    <string name="bookmark_name">Bookmark name</string>
    <string name="bookmark_url">Bookmark URL</string>
    <string name="current_bookmark_icon">Current bookmark icon</string>
    <string name="selected">Selected</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="one_bookmark_deleted">1 Bookmark Deleted</string>
    <string name="bookmarks_deleted">Bookmarks Deleted</string>
    <string name="undo">Undo</string>
    <string name="bookmarks_database_view">Bookmarks Database View</string>
    <string name="home_folder">Home Folder</string>
    <string name="privacy_browser_guide">Privacy Browser Guide</string>
    <string name="overview">Overview</string>
    <string name="local_storage">Local Storage</string>
    <string name="tor">Tor</string>
    <string name="tracking_uids">Tracking UIDs</string>
    <string name="planned_features">Planned Features</string>
    <string name="privacy">Privacy</string>
    <string name="javascript_preference">Enable JavaScript by default</string>
    <string name="javascript_preference_summary">JavaScript allows websites to run programs (scripts) on your device.</string>
    <string name="first_party_cookies_preference">Enable first-party cookies by default</string>
    <string name="first_party_cookies_preference_summary">Devices with versions of Android older than Lollipop (version 5.0) will also enable third-party cookies with this setting.</string>
    <string name="third_party_cookies_preference">Enable third-party cookies by default</string>
    <string name="third_party_cookies_summary">This setting requires Android Lollipop (version 5.0) or higher.  It has no effect if first-party cookies are disabled.</string>
    <string name="dom_storage_preference">Enable DOM storage by default</string>
    <string name="dom_storage_preference_summary">JavaScript must be enabled for DOM storage to function.</string>
    <string name="save_form_data_preference">Enable saving of form data by default</string>
    <string name="save_form_data_preference_summary">Saved form data can auto-populate fields on websites.</string>
    <string name="user_agent">User agent</string>
    <string-array name="user_agent_entries">
        <item>WebView Default</item>
        <item>Privacy Browser 1.0</item>
        <item>Firefox 46 on Android 6.0.1</item>
        <item>Chrome 50 on Android 6.0.1</item>
        <item>Firefox 46 on Linux</item>
        <item>Chromium 50 on Linux</item>
        <item>Konqueror 4.14 on Linux</item>
        <item>Firefox 46 on Windows 10</item>
        <item>Chrome 50 on Windows 10</item>
        <item>Internet Explorer 11 on Windows 10</item>
        <item>Edge 13 on Windows 10</item>
        <item>Custom</item>
    </string-array>
    <string-array name="user_agent_entry_values">  
        <item>Default user agent</item>  
        <item>PrivacyBrowser/1.0</item>
        <item>Mozilla/5.0 (Android 6.0.1; Mobile; rv:46.0) Gecko/46.0 Firefox/46.0</item>
        <item>Mozilla/5.0 (Linux; Android 6.0.1; Nexus 6P Build/MHC19Q) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.89 Mobile Safari/537.36</item>
        <item>Mozilla/5.0 (X11; Linux x86_64; rv:46.0) Gecko/20100101 Firefox/46.0</item>
        <item>Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.94 Safari/537.36</item>
        <item>Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.21 (KHTML, like Gecko) konqueror/4.14.14 Safari/537.21</item>
        <item>Mozilla/5.0 (Windows NT 10.0; WOW64; rv:46.0) Gecko/20100101 Firefox/46.0</item>
        <item>Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.102 Safari/537.36</item>
        <item>Mozilla/5.0 (Windows NT 10.0; WOW64; Trident/7.0; rv:11.0) like Gecko</item>
        <item>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2486.0 Safari/537.36 Edge/13.10586</item>
        <item>Custom user agent</item>  
    </string-array>
    <string name="custom_user_agent">Custom user agent</string>
    <string name="search">Search</string>
    <string name="javascript_disabled_search">JavaScript-disabled search</string>
    <string-array name="javascript_disabled_search_entries">
        <item>DuckDuckGo</item>
        <item>Google</item>
        <item>Bing</item>
        <item>Yahoo</item>
        <item>Custom</item>
    </string-array>
    <string-array name="javascript_disabled_search_entry_values">  
        <item>https://duckduckgo.com/html/?q=</item>
        <item>https://www.google.com/search?q=</item>
        <item>https://www.bing.com/search?q=</item>
        <item>https://search.yahoo.com/mobile/s?nojs=1&amp;p=</item>
        <item>Custom URL</item>  
    </string-array>
    <string name="javascript_disabled_search_custom_url">JavaScript-disabled search custom URL</string>
    <string name="javascript_enabled_search">JavaScript-enabled search</string>
    <string-array name="javascript_enabled_search_entries">
        <item>DuckDuckGo</item>
        <item>Google</item>
        <item>Bing</item>
        <item>Yahoo</item>
        <item>Custom</item>
    </string-array>
    <string-array name="javascript_enabled_search_entry_values">  
        <item>https://duckduckgo.com/?q=</item>
        <item>https://www.google.com/search?q=</item>
        <item>https://www.bing.com/search?q=</item>
        <item>https://search.yahoo.com/mobile/s?p=</item>
        <item>Custom URL</item>  
    </string-array>
    <string name="javascript_enabled_search_custom_url">JavaScript-enabled search custom URL</string>
    <string name="custom_url">Custom URL</string>
    <string name="general">General</string>
    <string name="homepage_preference">Homepage</string>
    <string name="swipe_to_refresh_enabled">Swipe to refresh</string>
    <string name="swipe_to_refresh_enabled_summary">Some websites don\'t work well if swipe to refresh is enabled.</string>
    <string name="about_privacy_browser">About Privacy Browser</string>
    <string name="version">Version</string>
        <string name="version_code">version code</string>
        <string name="hardware">Hardware</string>
            <string name="brand">Brand:\u00A0</string>
            <string name="manufacturer">Manufacturer:\u00A0</string>
            <string name="model">Model:\u00A0</string>
            <string name="device">Device:\u00A0</string>
            <string name="bootloader">Bootloader:\u00A0</string>
            <string name="radio">Radio:\u00A0</string>
        <string name="software">Software</string>
            <string name="android">Android:\u00A0</string>
            <string name="api">API</string>
            <string name="build">Build:\u00A0</string>
            <string name="security_patch">Security Patch:\u00A0</string>
            <string name="webkit">WebKit:\u00A0</string>
            <string name="chrome">Chrome:\u00A0</string>
    <string name="permissions">Permissions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="changelog">Changelog</string>
    <string name="licenses">Licenses</string>
    <string name="contributors">Contributors</string>
    <string name="links">Links</string>
    <string name="ad_id">Null</string>
</resources>