<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2016 Soren Stoutner <soren@stoutner.com>.

  This file is part of Privacy Browser <https://www.stoutner.com/privacy-browser>.

  Privacy Browser is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Privacy Browser is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Privacy Browser.  If not, see <http://www.gnu.org/licenses/>. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="privacy"
        android:title="@string/privacy" >

        <SwitchPreference
            android:key="javascript_enabled"
            android:title="@string/javascript_preference"
            android:summary="@string/javascript_preference_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="first_party_cookies_enabled"
            android:title="@string/first_party_cookies_preference"
            android:summary="@string/first_party_cookies_preference_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="third_party_cookies_enabled"
            android:title="@string/third_party_cookies_preference"
            android:summary="@string/third_party_cookies_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="dom_storage_enabled"
            android:title="@string/dom_storage_preference"
            android:summary="@string/dom_storage_preference_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="user_agent"
            android:title="@string/user_agent"
            android:entries="@array/user_agent_entries"
            android:entryValues="@array/user_agent_entry_values"
            android:defaultValue="Default user agent" />

        <!-- android:inputType="textVisiblePassword" sets the keyboard to have a dedicated number row. -->
        <!-- android:imeOptions="flagNoExtractUi" is not set because with the dedicated number row there often isn't room to see the EditText in landscape orientation. -->
        <EditTextPreference
            android:key="custom_user_agent"
            android:title="@string/custom_user_agent"
            android:defaultValue="PrivacyBrowser/1.0"
            android:inputType="textVisiblePassword|textMultiLine" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="search"
        android:title="@string/search">

        <ListPreference
            android:key="javascript_disabled_search"
            android:title="@string/javascript_disabled_search"
            android:entries="@array/javascript_disabled_search_entries"
            android:entryValues="@array/javascript_disabled_search_entry_values"
            android:defaultValue="https://duckduckgo.com/html/?q=" />

        <!-- android:imeOptions="flagNoExtractUi" is not set because with the the length of the title of the dialog box there often isn't enough space to see the EditText in landscape orientation. -->
        <EditTextPreference
            android:key="javascript_disabled_search_custom_url"
            android:title="@string/javascript_disabled_search_custom_url"
            android:defaultValue=""
            android:inputType="textUri"
            android:singleLine="true" />

        <ListPreference
            android:key="javascript_enabled_search"
            android:title="@string/javascript_enabled_search"
            android:entries="@array/javascript_enabled_search_entries"
            android:entryValues="@array/javascript_enabled_search_entry_values"
            android:defaultValue="https://duckduckgo.com/?q=" />

        <!-- android:imeOptions="flagNoExtractUi" is not set because with the the length of the title of the dialog box there often isn't enough space to see the EditText in landscape orientation. -->
        <EditTextPreference
            android:key="javascript_enabled_search_custom_url"
            android:title="@string/javascript_enabled_search_custom_url"
            android:defaultValue=""
            android:inputType="textUri"
            android:singleLine="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="general"
        android:title="@string/general" >

        <!-- android:imeOptions="flagNoExtractUi" is not set because in special character mode there often isn't enough space to see the EditText in landscape orientation. -->
        <EditTextPreference
            android:key="homepage"
            android:title="@string/homepage_preference"
            android:defaultValue="https://www.duckduckgo.com"
            android:inputType="textUri"
            android:singleLine="true" />

        <SwitchPreference
            android:key="swipe_to_refresh_enabled"
            android:title="@string/swipe_to_refresh_enabled"
            android:summary="@string/swipe_to_refresh_enabled_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>