<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2015-2016 Soren Stoutner <soren@stoutner.com>.

  This file is part of Privacy Browser <https://www.stoutner.com/privacy-browser>.

  Privacy Browser is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Privacy Browser is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Privacy Browser.  If not, see <http://www.gnu.org/licenses/>. -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainWebViewActivity">

    <item
        android:id="@+id/toggleJavaScript"
        android:title="@string/javascript"
        android:orderInCategory="10"
        app:showAsAction="always" />

    <item
        android:id="@+id/toggleFirstPartyCookies"
        android:title="@string/first_party_cookies"
        android:orderInCategory="20"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/toggleThirdPartyCookies"
        android:title="@string/third_party_cookies"
        android:orderInCategory="30"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/toggleDomStorage"
        android:title="@string/dom_storage"
        android:orderInCategory="40"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/clearCookies"
        android:title="@string/clear_cookies"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item
        android:id="@+id/clearDomStorage"
        android:title="@string/clear_dom_storage"
        android:orderInCategory="60"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:orderInCategory="70"
        app:showAsAction="never" />

    <item
        android:id="@+id/addToHomescreen"
        android:title="@string/add_to_home_screen"
        android:orderInCategory="80"
        app:showAsAction="never" />

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:orderInCategory="90"
        app:showAsAction="never" />
</menu>
