<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2016 Soren Stoutner <soren@stoutner.com>.

  This file is part of Privacy Browser <https://www.stoutner.com/privacy-browser>.

  Privacy Browser is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Privacy Browser is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Privacy Browser.  If not, see <http://www.gnu.org/licenses/>. -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical" >

    <!-- The icon selection rows. -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <!-- The column displaying the icons. -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/create_folder_default_icon"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/folder_blue_bitmap"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/create_folder_web_page_icon"
                android:layout_height="30dp"
                android:layout_width="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <!-- The column with the `RadioGroup`. -->
        <RadioGroup
            android:id="@+id/create_folder_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/create_folder_default_icon_radiobuttion">

            <RadioButton
                android:id="@id/create_folder_default_icon_radiobuttion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="9dp"
                android:text="@string/default_folder_icon"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/create_folder_web_page_icon_radiobuttion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_page_favorite_icon"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <!-- `android.support.design.widget.TextInputLayout` makes the `android:hint` float above the `EditText`. -->
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" >

        <!-- `android:imeOptions="actionGo"` sets the keyboard to have a "go" key instead of a "new line" key.
            `android:inputType="textUri"` disables spell check in the EditText. -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_folder_name_edittext"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/folder_name"
            android:imeOptions="actionGo"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/folder_names_must_be_unique" />
</LinearLayout>